--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ body {
   text-transform: uppercase;
 }
 
-.background-grey {
+.advantages-background-grey {
   background-color: var(--grey-1);
 }
 
@@ -66,7 +66,10 @@ body {
   color: var(--grey-3);
 }
 
-/*.advice*/
+.advice {
+  list-style: none;
+}
+
 .advice-title {
   font-weight: bold;
   font-size: 21px;
@@ -124,7 +127,8 @@ body {
 
 /*.socials-link
 .author
-.author-link*/
+.author-link
+.website-by*/
 
 /*Классы для страницы Отели*/
 
@@ -177,6 +181,10 @@ body {
   list-style: none;
 }
 
+.sorting-text-item :hover {
+  color: #81B3D2;
+}
+
 .up-and-down {
   list-style: none;
 }
@@ -204,4 +212,8 @@ body {
 .rating {
   color: var(--grey-5);
   background-color: #f2f2f2;
+}
+
+.stars {
+  list-style: none;
 }
