--- a/css/style.css
+++ b/css/style.css
@@ -40,22 +40,28 @@ body {
 .main-header {}
 
 .navigation {
+
   margin: 0;
   padding: 0;
 }
 
 .main-header-logo {
   display: flex;
-  
+
+  z-index: 3;
   justify-content: center;
 }
 
 .site-navigation {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-around;
+  height: 56px;
+  align-items: center;
+  z-index: 1;
   margin: 0;
   padding: 0;
   list-style: none;
+
 }
 
 .site-navigation-link {
@@ -79,9 +85,15 @@ body {
   background: url('../img/background-sedona.jpg');
 }
 
-.photo {}
+.photo {
+  z-index: 2;
 
-.welcome {}
+}
+
+.welcome {
+  height: 350.88px;
+  width: 456.65px;
+}
 
 /*Main-title*/
 
@@ -90,8 +102,16 @@ body {
   padding: 0;
 }
 
-/*.main-content-title
-.main-content-subtitle*/
+.main-content-title {
+  margin: 0;
+  padding-top: 51px;
+  padding-bottom: 51px;
+}
+
+.main-content-subtitle {
+  margin: 0;
+  padding-bottom: 51px;
+}
 
 .text-grey {
   color: var(--grey-3);
@@ -116,7 +136,14 @@ body {
   text-transform: uppercase;
 }
 
-.advantages-list {}
+.advantages-list {
+  display: flex;
+  min-height: 256px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
 
 .text-white {
   color: var(--white);
@@ -142,6 +169,9 @@ advantages-photo {
 .advice {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  min-height: 330px;
+  justify-items: center;
+  align-items: center;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -179,27 +209,61 @@ advantages-photo {
 
 /* Booking form*/
 
-/*.booking*/
+.booking {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  width: 568px;
+
+}
+
+.booking-form {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.booking-paragraph {}
 
 .booking-title {
+
+  margin: 58px;
   font-weight: bold;
   font-size: 30px;
   line-height: 24px;
 }
 
-/*.booking-text*/
+.booking-text {
+  margin: 58px;
+}
+
+.booking-item {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
 
 .search-form {
+
+  align-self: center;
+  width: 568px;
+  height: 86px;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
   background-color: var(--brown);
 }
 
+
 .find-button {
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
+  width: 458px;
+  height: 58px;
+  margin: 55px;
   text-transform: uppercase;
   background-color: var(--blue);
 }
@@ -235,21 +299,27 @@ advantages-photo {
 }
 
 .socials {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+
   list-style: none;
-  
+
 }
 
 .socials-item {
-  display: grid;
-  display: inline;
+  margin: 3px;
   background-color: var(--blue);
 }
 
 /*.socials-link*/
 
 .author {
-  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   padding-top: 38px;
 }
 
@@ -267,8 +337,8 @@ advantages-photo {
 }
 
 .sorting {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+
   margin: 0;
   padding: 0;
 }
@@ -293,10 +363,11 @@ advantages-photo {
 }
 
 /*.infrastructure-text
-.type-of-housing-text
-.slider*/
+.type-of-housing-text*/
+.slider {}
 
 .prise-slider-title {
+
   font-weight: bold;
   font-size: 16px;
   text-align: center;
@@ -308,23 +379,25 @@ advantages-photo {
 }
 
 .sorting-result {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  }
+  display: flex;
+  align-items: baseline;
+}
 
 .result {
- 
+  display: flex;
+  align-items: baseline;
 }
 
 .sorting-title {
-  float: left;
+
+  margin: 46px;
   font-weight: bold;
   font-size: 21px;
   line-height: 26px;
 }
 
 .sorting-subtitle {
-  float: left;
+
   font-size: 12px;
   line-height: 18px;
 }
@@ -348,9 +421,8 @@ advantages-photo {
 }
 
 .up-and-down {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-area: end;
+  display: flex;
+  margin-left: auto;
   list-style: none;
 }
 
@@ -358,30 +430,17 @@ advantages-photo {
 
 .down {}
 
+/*Hotels*/
+
 .hotel-results {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: column;
   list-style: none;
 }
 
-/*Amara*/
 
-.hotel-amara {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
+.hotel-photo {}
 
-.amara {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 0;
-  padding: 0;
-  align-content: start;
-}
-
-.photo-amara {}
-
-.info-amara {}
 
 .hotel-items {
   font-weight: bold;
@@ -389,14 +448,13 @@ advantages-photo {
   line-height: 26px;
 }
 
-.amara-span {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
+.hotel-type {}
+
+.hotel-price {}
 
 .detail-button {
   margin: 3px;
-border: 0px;
+  border: 0px;
   color: var(--white);
   background-color: var(--blue);
 }
@@ -409,80 +467,30 @@ border: 0px;
   text-transform: uppercase;
 }
 
-.hotel-rating {
-  
-}
+.hotel-rating {}
 
 .rating {
   color: var(--grey-5);
   background-color: #f2f2f2;
-  
+
 }
 
-.amara-stars {
+.stars-4 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   list-style: none;
 }
 
-/*Desert*/
-
-.hotel-desert {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.desert {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 0;
-  padding: 0;
-  align-content: start;
-}
-
-.photo-desert {}
-
-.info-desert {}
-
-.desert-span {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.desert-stars {
+.stars-3 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-area: end;
   list-style: none;
 }
 
-/*Villas*/
-
-.hotel-villas {
+.stars-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
-}
-
-.villas {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  margin: 0;
-  padding: 0;
-  align-content: start;
-}
-
-.photo-villas {}
-
-.info-villas {}
-
-.villas-span {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.villas-stars {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
- 
+  grid-area: end;
   list-style: none;
 }
